--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,15 @@ layout: compress
   				    }
   			    });
   </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120580848-1"></script>
+  <script>
+              window.dataLayer = window.dataLayer || [];
+              function gtag(){dataLayer.push(arguments);}
+              gtag('js', new Date());
+
+              gtag('config', 'UA-120580848-1');
+  </script>
 
   <body>
 
