Major website update

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,7 @@
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
 
+<!-- Custom styles -->
+<link rel="stylesheet" href="{{ base_path }}/assets/css/custom-archive.css">
+
 <meta http-equiv="cleartype" content="on">
