--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,6 +33,9 @@
 @import "page";
 @import "archive";
 @import "sidebar";
+@import "projects";
+@import "publications";
+@import "about";
 
 @import "vendor/font-awesome/fontawesome";
 @import "vendor/font-awesome/solid";
