--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -13,7 +13,11 @@
               {% else %}
               {% assign domain = base_path %}
             {% endif %}
-            <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
+            {% assign current_url = page.url | remove: ".html" %}
+            {% assign link_url = link.url | remove: ".html" %}
+            <li class="masthead__menu-item{% if current_url == link_url %} masthead__menu-item--active{% endif %}">
+              <a href="{{ domain }}{{ link.url }}">{{ link.title }}</a>
+            </li>
           {% endfor %}
         </ul>
         <ul class="hidden-links hidden"></ul>
